chore: default gemini model to 2.5 pro

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
 AUTH_SECRET="replace-me-with-a-strong-secret"
 GEMINI_API_KEY=""
-GEMINI_MODEL="gemini-2.0-pro-exp"
+GEMINI_MODEL="gemini-2.5-pro"
