feat: wire ai panel to gemini endpoint

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
 AUTH_SECRET="replace-me-with-a-strong-secret"
 GEMINI_API_KEY=""
 GEMINI_MODEL="gemini-2.5-pro"
+AI_WORKFLOW_ALLOWED_ORIGIN="http://localhost:5678"
