--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,8 @@ DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
 AUTH_SECRET="replace-me-with-a-strong-secret"
 GEMINI_API_KEY=""
 GEMINI_MODEL="gemini-2.5-pro"
+GEMINI_EMBED_MODEL="text-embedding-004"
+QDRANT_URL="http://localhost:6333"
+QDRANT_API_KEY=""
+QDRANT_COLLECTION="ai_workflow_examples"
 AI_WORKFLOW_ALLOWED_ORIGIN="http://localhost:5678"
