--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "update:samples": "tsx scripts/update-sample-workflows.ts",
+    "seed:qdrant": "tsx scripts/seed-qdrant.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@google/generative-ai": "^0.24.1",
+    "@langchain/google-genai": "^1.0.0",
     "@prisma/client": "^6.19.0",
+    "@qdrant/js-client-rest": "^1.15.1",
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
+    "langchain": "^1.0.3",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tsx": "^4.20.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
