--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@google/generative-ai": "^0.24.1",
+    "@langchain/community": "^0.3.57",
     "@langchain/google-genai": "^1.0.0",
     "@prisma/client": "^6.19.0",
     "@qdrant/js-client-rest": "^1.15.1",
     "bcrypt": "^6.0.0",
-    "dotenv": "^17.2.3",
-    "langchain": "^1.0.3",
+    "dotenv": "^16.4.5",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
