--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,29 @@
 version: "3.9"
 
 services:
+  app:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.dev
+    container_name: project05-app
+    restart: unless-stopped
+    env_file:
+      - .env
+      - .env.local
+    environment:
+      HOST: 0.0.0.0
+      PORT: 3000
+    ports:
+      - "3000:3000"
+    volumes:
+      - .:/app
+    depends_on:
+      postgres:
+        condition: service_started
+      qdrant:
+        condition: service_started
+    command: ["/entrypoints/dev.sh"]
+
   postgres:
     image: postgres:16-alpine
     container_name: project05-postgres
