--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@google/generative-ai": "^0.24.1",
     "@langchain/community": "^0.3.57",
+    "@langchain/core": "^0.3.79",
     "@langchain/google-genai": "^1.0.0",
     "@prisma/client": "^6.19.0",
     "@qdrant/js-client-rest": "^1.15.1",
