many UI updates

--- a/n8n/packages/cli/tsconfig.json
+++ b/n8n/packages/cli/tsconfig.json
@@ -8,6 +8,7 @@
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"baseUrl": "src",
+		"types": ["node", "jest", "./src/types/ws"],
 		"paths": {
 			"@/*": ["./*"],
 			"@test/*": ["../test/shared/*"],
